deployments/payment-gateway-backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-gateway-backend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/payment-gateway-backend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/payment-gateway-backend: "true"
